# story-writer

./: .gitignore  pyproject.toml  train.py
src/: data.py  model.py
src/model/: __init__.py  diffusion.py  gpt.py  util.py
