[tool.poetry]
name = "story-writer"
version = "0.1.0"
description = ""
authors = ["jacob-papermill <jacob@papermill.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
huggingface-hub = "^0.26.2"
datasets = "^3.1.0"
transformers = "^4.46.3"
torch = "^2.5.1"
numpy = "^2.1.3"
polars = "^1.14.0"
accelerate = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
